@@ -1,3 +1,7 @@
+Tue Jun 18 22:04:35 2013  Zachary Scott  <zachary@zacharyscott.net>
+
+	* ext/objspace/object_tracing.c: Document object_tracing methods.
+
 Tue Jun 18 21:58:17 2013  Zachary Scott  <zachary@zacharyscott.net>
 
 	* gc.c: Rename rb_mObSpace -> rb_mObjSpace
